compiler warnings & generics